<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!--天气预报-->
        <Button
            android:id="@+id/btn_weather"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_weather" />
        <!--笑话大全-->
        <Button
            android:id="@+id/btn_joke"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_joke" />
        <!--美女-->
        <Button
            android:id="@+id/btn_meinv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_meinv" />

    </LinearLayout>
</FrameLayout>
